--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <li><a href="#">Termos de Uso</a></li>
                 <li><a href="#">Política de Privacidade</a></li>
             </ul>
-            <p class="copyright">© 2025 | desesvolvido por estudantes do 3 DS-A/p>
+            <p class="copyright">© 2025 | desesvolvido por estudantes do 3 DS-A </p>
         </div>
     </footer>
 </body>
